Experimenting with router and swagger doc generation
