# docs/swagger.json
@@ -20,6 +20,7 @@
     "paths": {
         "/items": {
             "get": {
+                "description": "List items",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,7 +28,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "listAll"
                 ],
                 "summary": "Gets all items from database",
                 "responses": {
@@ -42,12 +43,45 @@
                     }
                 }
             }
+        },
+        "/items/{id}": {
+            "get": {
+                "description": "Get item by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "byId"
+                ],
+                "summary": "Get item by unique id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Item guid",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/data.Item"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "data.Item": {
             "type": "object",
             "required": [
+                "id",
                 "name",
                 "price"
             ],
